@@ -2,6 +2,12 @@ CHANGELOG
 This is the change log for the phpWebSite base only. Each module has
 its own separate CHANGELOG file.
 
+2 Jan 2008
++ DBPager - changed to prevent XSS (thanks to Audun Larsen) and allow
+            accented characters.
++ Text - accented characters allow in chars_space check in isValidInput
+
+
 14 December 2007
 + DBPager
   o Added error check to run function
